--- a/Projeto/fipe-mobiauto/package.json
+++ b/Projeto/fipe-mobiauto/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
